--- a/demo-client/style.css
+++ b/demo-client/style.css
@@ -13,6 +13,7 @@ body {
 #png-stream {
   width: 100%;
   height: 100%;
-  image-rendering: crisp-edges;
+  /* We have to use pixelated because Chrome doesn't have support for crisp-edges */
+  image-rendering: pixelated;
   object-fit: contain;
 }
